18/04/06 -*- Version 1.1.0 -*-

18/04/06 Julien Dutheil
* New IOSequenceFactory class.
06/04/06 Julien Dutheil
* New () function operators defined on SequenceContainers.