@@ -1,3 +1,6 @@
+09/05/06 Julien Dutheil
+* Bug fixed in SiteTools::hasUnknown(Site).
+
 18/04/06 -*- Version 1.1.0 -*-
 
 18/04/06 Julien Dutheil
